[gd_scene load_steps=2 format=3 uid="uid://bvbp2v80of60g"]

[ext_resource type="Script" path="res://Scenes/PlatformerPlayer/Platforms/Components/DisappearingPlatform/DisappearingPlatformComponent.gd" id="1_v3n33"]

[node name="DisappearingPlatformComponent" type="Area2D"]
collision_mask = 6
script = ExtResource("1_v3n33")

[node name="Disappear" type="Timer" parent="."]
one_shot = true

[node name="Respawn" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Disappear" to="." method="_on_disappear_timeout"]
[connection signal="timeout" from="Respawn" to="." method="_on_respawn_timeout"]
